--- a/assets/www/goodweight-style-override.css
+++ b/assets/www/goodweight-style-override.css
@@ -33,8 +33,8 @@
 
 #asteriskExplanation{
 	/*display: none;*/
-	background-image: url(img/logo.png); 
-	width:222px;
+	background-image: url(img/logo.png);
+    width:222px;
 	height:50px;
 	position:absolute;
 	bottom: 3px;
@@ -49,7 +49,13 @@
 	left: 0px;
 }
 
-[data-role=footer]{display:none; bottom:0; position:absolute !important; top: auto !important; width:100%;}
+[data-role=footer]{
+    z-index:2;
+    display:none; 
+    bottom:0; 
+    position:absolute !important; 
+    top: auto !important; 
+    width:100%;}
 
 .ui-navbar .ui-btn-inner{
 	padding-top: 10px;
