Added high-res oak background photo

--- a/assets/www/goodweight-style-override.css
+++ b/assets/www/goodweight-style-override.css
@@ -166,7 +166,7 @@ box-align:center;
 
 .ui-body-c {
 	
-	background: url(img/oak.jpg) no-repeat top left fixed;
+	background: url(img/shutterstock_2151257.jpg) no-repeat top left fixed;
 		-webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
